# painel-gerencia

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  create_db.py  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt  test_alembic.py  test_sa.py
backend/alembic/: env.py
backend/alembic/versions/: 0d20aaa7af40_make_employee_cpf_nullable.py  169ec6a35cfc_create_saturday_scales_table.py  17109e7c607e_initial_tables.py  1f2c99f9f1fd_add_absences_medical_leaves_to_employees.py  4f99f2813aec_alter_production_quantity_to_numeric.py  4ff3d57b498b_create_revoked_tokens_table.py  9379bfaff420_add_available_unit_ids_to_employees.py  9b5ed274c569_add_employee_start_and_termination_dates.py  bc9b0175f3db_add_cnpj_and_rescision.py  c4ad006ab8cf_make_employee_unit_id_nullable.py  ef041c4cde38_create_absences_table.py  fcacdc23e964_alter_production_to_unit.py
backend/app/: __init__.py  main.py
backend/app/background/: __init__.py  availability.py  vacations.py
backend/app/core/: __init__.py  config.py  exceptions.py  limiter.py  permissions.py  responses.py  security.py
backend/app/database/: __init__.py  base.py  repository.py  session.py
backend/app/middleware/: __init__.py  audit.py  error_handler.py  security_headers.py
backend/app/modules/: __init__.py
backend/app/modules/absences/: model.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  dependencies.py  model.py  (+3 more)
backend/scripts/: clear_db.py  create_admin.py  seed.py
backend/tests/: conftest.py
(+105 files in other folders)
